# beer-brain-back

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  docker-compose.yml  manage.py  project-idea-ru.md  pyproject.toml  requirements.txt  testdata.sql
back/: README.md  pyproject.toml  requirements.txt
back/src/: testdata.sql
back/src/beer_brain/: settings.py  urls.py
beer_brain/: asgi.py  settings.py  urls.py  wsgi.py
beer_brain/events/: models.py  notification_templates.py  paginators.py  permissions.py  serializers.py  tests.py  urls.py  views.py
beer_brain/events/migrations/: 0001_initial.py  0002_deposit_event.py  0003_repayment_description.py  0004_transaction_movement.py  0005_remove_repayment_event_remove_repayment_payer_and_more.py  0006_alter_movement_unique_together.py
beer_brain/events/tests/: test_events.py  test_movements.py  test_transactions.py  test_transactions_with_movements.py
beer_brain/notifications/: apps.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
beer_brain/notifications/migrations/: 0001_initial.py
beer_brain/users/: apps.py  managers.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
beer_brain/users/migrations/: 0003_user_unique_lowercase_username.py
front/: README.md  index.html  package-lock.json  package.json  style.xml
front/src/: App.tsx  authentication.ts  constants.ts  main.tsx  themeContext.tsx
front/src/auth/: authentication.ts
front/src/components/: CreateEvent.tsx  Event.tsx  Guest.tsx  Header.tsx  Home.css  Home.tsx  NotFound.tsx  (+8 more)
(+56 files in other folders)
